[project]
name = "dk-land-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "aiogram-dialog>=2.4.0",
    "apscheduler>=3.11.0",
    "dynaconf>=3.2.11",
    "fluentogram>=1.2.1",
    "gspread-asyncio>=2.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
]
